--- a/src/LogsearchShipper.Core/LogsearchShipper.Core.csproj
+++ b/src/LogsearchShipper.Core/LogsearchShipper.Core.csproj
@@ -79,7 +79,7 @@
   <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="Resources\nxlog-ce-2.9.1347.zip" />
+    <None Include="Resources\nxlog_ce_2.9.1504.zip" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Resource.resx">
